--- a/dashboard/frontend/index.html
+++ b/dashboard/frontend/index.html
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <div class="form">
-          <form action="/predict" method="POST">
+          <form action="http://localhost:5000/predict" method="POST">
             <section>
                 <label>Enter length in miles</label>
                 <input class="leng" name="leng">
@@ -121,7 +121,7 @@
 
   <!-- Footer-->
   <div id="footer">
-    <p>Ajinkya Bhosle, Sandeep Kolwalkar, Brie Pfisterer, and Ryan Strong &copy;2021</p>
+    <p>Ajinkya Bhosle, Sandeep Kolwalkar, Brie Pfisterer, Ryan Strong, and Poonam Tashildar &copy;2021</p>
   </div>
 
   <!-- D3 JavaScript -->
