--- a/poonam_final_project_ML/dashboard/frontend/index.html
+++ b/poonam_final_project_ML/dashboard/frontend/index.html
@@ -10000,8 +10000,12 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
+    <!--fatality map javascript-->
+    <script type="text/javascript" src="static/js/fatalities_map.js"></script>
+    <!--frequency map javascript-->
+    <script type="text/javascript" src="static/js/frequency_map.js"></script>
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/index.js"></script>
+  <!-- <script type="text/javascript" src="static/js/index.js"></script> -->
 </body>
 
 </html>
